--- a/suigeneris/src/App.css
+++ b/suigeneris/src/App.css
@@ -4,7 +4,7 @@ body {
   overflow-x: hidden;
 }
 
-@keyframes anmSelected {
+/* @keyframes anmSelected {
   0% {
     background-position: initial;
   }
@@ -13,8 +13,100 @@ body {
   }
 }
 
-:target, .slc {
+:target {
     background: repeating-linear-gradient(9deg, rgba(255,255,255,0.05) 0%, rgba(255, 255, 255, 0.15) 100%) !important;
     background-size: 50px 50px;
     animation: anmSelected 10s linear infinite;
+} */
+
+@keyframes anmSelected {
+  0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.cont-highlight {
+  position: relative;
+  overflow: unset !important;
+}
+
+:target::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  background: linear-gradient(-45deg, rgba(238, 119, 82, 0.1), rgba(231, 60, 126, 0.1), rgba(35, 166, 213, 0.1), rgba(35, 213, 171, 0.1));
+	background-size: 400% 400%;
+  background-position: 0% 50%;
+	animation: anmSelected 10s ease infinite;
+}
+
+:target::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  -webkit-filter: blur(5vw);
+  -moz-filter: blur(5vw);
+  -ms-filter: blur(5vw);
+  filter: blur(5vw);
+  background: linear-gradient(270deg, #0fffc1, #7e0fff);
+  background-size: 200% 200%;
+  animation: animateGlow 7s ease infinite;
+}
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes textColor {
+  0% {
+    color: #7e0fff;
+  }
+  50% {
+    color: #0fffc1;
+  }
+  100% {
+    color: #7e0fff;
+  }
+}
+
+/* terme impropre */
+wrg {
+  text-decoration: red wavy underline;
+}
+
+/* context du terme correct */
+ctx {
+  font-weight: bold;
+  text-decoration: underline dotted;
+}
+
+/* terme correct */
+rgt {
+  font-variant: small-caps slashed-zero;
+  background-color:#e7e700;
+  padding: 0px 2px 0px 2px;
+  color: black;
+  font-weight: bold;
 }
