--- a/suigeneris/src/App.css
+++ b/suigeneris/src/App.css
@@ -44,11 +44,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
   
   background: linear-gradient(-45deg, rgba(238, 119, 82, 0.1), rgba(231, 60, 126, 0.1), rgba(35, 166, 213, 0.1), rgba(35, 213, 171, 0.1));
 	background-size: 400% 400%;
   background-position: 0% 50%;
 	animation: anmSelected 10s ease infinite;
+
+  pointer-events: none;
 }
 
 :target::after {
@@ -67,6 +70,8 @@ body {
   background: linear-gradient(270deg, #0fffc1, #7e0fff);
   background-size: 200% 200%;
   animation: animateGlow 7s ease infinite;
+
+  pointer-events: none;
 }
 @keyframes animateGlow {
   0% {
@@ -93,7 +98,7 @@ body {
 
 /* terme impropre */
 wrg {
-  text-decoration: red wavy underline;
+  text-decoration: orange wavy underline;
 }
 
 /* context du terme correct */
@@ -105,8 +110,12 @@ ctx {
 /* terme correct */
 rgt {
   font-variant: small-caps slashed-zero;
-  background-color:#e7e700;
+  background-color:#83e700;
   padding: 0px 2px 0px 2px;
   color: black;
   font-weight: bold;
+}
+
+.sepText {
+  opacity: .5;
 }
